Using local assets

--- a/client/index.html
+++ b/client/index.html
@@ -41,11 +41,9 @@ var config = {
 
   function preload ()
   {
-      this.load.setBaseURL('http://labs.phaser.io');
-
-      this.load.image('sky', 'assets/skies/space3.png');
-      this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-      this.load.image('red', 'assets/particles/red.png');
+      this.load.image('sky', 'assets/space3.png');
+      this.load.image('logo', 'assets/phaser3-logo.png');
+      this.load.image('red', 'assets/red.png');
   }
 
   function create ()
